JumpScript/tests/baselines/reference/declarationEmitUnknownImport.errors.txt
tests/cases/compiler/declarationEmitUnknownImport.jump(1,14): error TS2304: Cannot find name 'SomeNonExistingName'.
tests/cases/compiler/declarationEmitUnknownImport.jump(1,14): error TS2503: Cannot find namespace 'SomeNonExistingName'.
tests/cases/compiler/declarationEmitUnknownImport.jump(1,14): error TS4000: Import declaration 'Foo' is using private name 'SomeNonExistingName'.


==== tests/cases/compiler/declarationEmitUnknownImport.jump (3 errors) ====
    import Foo = SomeNonExistingName
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SomeNonExistingName'.
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'SomeNonExistingName'.
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS4000: Import declaration 'Foo' is using private name 'SomeNonExistingName'.
    export {Foo}